@@ -57,6 +57,11 @@ import de.agilecoders.wicket.core.markup.html.bootstrap.navbar.NavbarDropDownBut
 import de.agilecoders.wicket.extensions.markup.html.bootstrap.icon.FontAwesomeIconType;
 
 public abstract class AbstractBasePage<T> extends GenericWebPage<T> {
+  /**
+   * 
+   */
+  private static final long serialVersionUID = 1L;
+
   @SpringBean
   private NutchService service;
 
@@ -105,6 +110,11 @@ public abstract class AbstractBasePage<T> extends GenericWebPage<T> {
 
   protected Component addUserMenu() {
     DropDownButton userMenu = new NavbarDropDownButton(Model.of("Username")) {
+      /**
+       * 
+       */
+      private static final long serialVersionUID = 1L;
+
       @Override
       protected List<AbstractLink> newSubMenuButtons(final String buttonMarkupId) {
         List<AbstractLink> subMenu = Lists.newArrayList();
@@ -125,6 +135,11 @@ public abstract class AbstractBasePage<T> extends GenericWebPage<T> {
     IModel<String> instanceName = PropertyModel.of(currentInstance, "name");
     DropDownButton instancesMenu = new NavbarDropDownButton(instanceName) {
 
+      /**
+       * 
+       */
+      private static final long serialVersionUID = 1L;
+
       @Override
       protected List<AbstractLink> newSubMenuButtons(String buttonMarkupId) {
         List<NutchInstance> instances = instanceService.getInstances();
@@ -132,6 +147,11 @@ public abstract class AbstractBasePage<T> extends GenericWebPage<T> {
         for (NutchInstance instance : instances) {
           subMenu.add(new Link<NutchInstance>(buttonMarkupId, Model
               .of(instance)) {
+            /**
+                 * 
+                 */
+                private static final long serialVersionUID = 1L;
+
             @Override
             public void onClick() {
               currentInstance.setObject(getModelObject());
@@ -158,6 +178,11 @@ public abstract class AbstractBasePage<T> extends GenericWebPage<T> {
   }
 
   private class InstanceModel extends LoadableDetachableModel<NutchInstance> {
+
+    /**
+     * 
+     */
+    private static final long serialVersionUID = 1L;
 
     @Override
     public void setObject(NutchInstance instance) {
