@@ -29,6 +29,11 @@ import org.apache.wicket.spring.injection.annot.SpringBean;
 import org.apache.wicket.util.time.Duration;
 
 public class DashboardPage extends AbstractBasePage<Object> {
+  /**
+   * 
+   */
+  private static final long serialVersionUID = 1L;
+
   @SpringBean
   private NutchService nutchService;
 
@@ -41,10 +46,14 @@ public class DashboardPage extends AbstractBasePage<Object> {
     panel.add(new Label("jobsRunning", new JobsModel()));
     add(panel);
     add(new BookmarkablePageLink<Void>("viewInstances", InstancesPage.class));
-
   }
 
   private class JobsModel extends LoadableDetachableModel<Integer> {
+    /**
+     * 
+     */
+    private static final long serialVersionUID = 1L;
+
     @Override
     protected Integer load() {
       NutchInstance currentInstance = getCurrentInstance();
